--- a/data/templates/ne.html
+++ b/data/templates/ne.html
@@ -7,7 +7,19 @@
 	<script type="application/ld+json">%graph%</script>
 </head>
 <body>
- <div id="graph"></div>
+ <div class="container-fluid">
+	 <div class="row">
+		 <div class="col-xs-2">
+			 <img class="img-responsive" src="/images/Wappen_Wallis_matt.svg" />
+		 </div>
+
+		 <div class="col-xs-8">
+    <div id="graph"></div>
+		 </div>
+
+		 <div class="col-xs-2"></div>
+	 </div>
+ </div>
 
  <script src="/js/jsonld.js"></script>
  <script src="/js/react.js"></script>
