--- a/data/templates/ne.html
+++ b/data/templates/ne.html
@@ -7,7 +7,9 @@
 	<script type="application/ld+json">%graph%</script>
 </head>
 <body>
- <div class="container-fluid">
+ <div class="page-header"></div>
+
+ <div class="container">
 	 <div class="row">
 		 <div class="col-xs-2">
 			 <img class="img-responsive" src="/images/Wappen_Wallis_matt.svg" />
