--- a/modules/alod-web-interface/public/zack.css
+++ b/modules/alod-web-interface/public/zack.css
@@ -1,23 +1,53 @@
 /* zack */
+body {
+    margin: 0px;
+}
+
+.zack-big {
+    text-size: 18pt;
+}
+
 .zack-query-box {
-    background-color: white;
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    right: 10px;
+    background-color:rgba(0,0,0,0.2);
+    position: fixed;
+    z-index: 10000;
+    height: 50px;
+    top: 20px;
+    left: 50px;
+    right: 50px;
 }
 
 .zack-result {
     height: 70px;
+    border: 2px solid black;
+    overflow: hidden;
 }
 
+.zack-result-list {
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+}
 
+.zack-big {
+    height: 26px; 
+    margin: 8px;
+    padding: 4px;
+    border: 0px white solid;
+    font-size: 18px;
+}
+
+.zack-query-input {
+    width: 80%;
+}
 /* max-height - the only parameter in this file that needs to be edited.
  * Change it to suit your needs. The rest is recommended to leave as is.
  */
 .clusterize-scroll{
-  max-height: 400px;
   overflow: auto;
+  max-height: 80%;
 }
 
 /* By default extra tag .clusterize-keep-parity added to keep parity of rows.
@@ -33,6 +63,7 @@
  */
 .clusterize-content{
     outline: 0;
+    margin-top: 80px;
 }
 
 /* centering message that appears when no data provided
