--- a/data/public/zack/zack.css
+++ b/data/public/zack/zack.css
@@ -29,7 +29,6 @@ body {
     right: 0;
 }
 
-
 .zack-result {
     height: 70px;
     border-top: 2px solid black;
@@ -49,7 +48,6 @@ body {
     font-size: 18px;
     margin: 0;
 }
-
 
 .result-level {
     width: 70px;
@@ -113,6 +111,7 @@ body {
 .filterable:after {
    margin-left: 5px;
    font-weight: 600;
+   margin-top: 4px;
    color: green;
    content: "⑅"
 }
