--- a/data/public/zack/zack.css
+++ b/data/public/zack/zack.css
@@ -18,12 +18,12 @@ body {
 }
 
 .zack-overview {
-    background-color:rgba(0,0,0,0.1);
+    background-color:lightgray;
     position: fixed;
-    max-height: 18%;
-    height: 18%;
+    max-height: 100px;
+    height: 100px;
     z-index: 10000;
-    padding: 8px;
+    padding-top: 8px;
     bottom: 0;
     left: 0;
     right: 0;
@@ -49,6 +49,17 @@ body {
     margin: 0;
 }
 
+.axis path,
+.axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
+
+.axis text {
+  font: 10px sans-serif;
+}
+
 .result-level {
     width: 70px;
     height: 20px;
@@ -71,6 +82,7 @@ body {
     border-right: 6px solid transparent;
     border-top: 6px solid #000;
     position: absolute;
+    margin-left: -6px;
 }
 
 .result-main {
@@ -116,12 +128,25 @@ body {
    content: "⑅"
 }
 
+.level-filterable {
+    font-size: 12px;
+    background-color: lightgray;
+    line-height: 95%;
+    margin: 2px 4px 2px 4px;
+    padding: 2px 4px 2px 4px;
+    border-radius: 5px;
+    color: green;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+
 /* max-height - the only parameter in this file that needs to be edited.
  * Change it to suit your needs. The rest is recommended to leave as is.
  */
 .clusterize-scroll{
   overflow: auto;
-  max-height: 80%;
+  max-height: 100%;
 }
 
 /* By default extra tag .clusterize-keep-parity added to keep parity of rows.
