--- a/modules/zack/public/zack.css
+++ b/modules/zack/public/zack.css
@@ -144,24 +144,49 @@ body {
 }
 
 .filterable:after {
+   font-size: 14px;
    margin-left: 5px;
    font-weight: 600;
    margin-top: 4px;
    color: green;
-   content: "⑅"
+   content: "⑅";
+   vertical-align: -40%;
 }
+
+.zack-query-box .filterable {
+    font-size: 110%;
+    background-color: white;
+    float: right;
+}
+
+.zack-query-box .filterable:after {
+    font-size: 110%;
+    vertical-align: -24%;
+}
+
 
 .level-filterable {
     font-size: 12px;
     background-color: lightgray;
-    line-height: 95%;
+    line-height: 60%;
     margin: 2px 4px 2px 4px;
-    padding: 2px 4px 2px 4px;
+    padding: 2px 4px 2px 0px;
     border-radius: 5px;
     color: green;
     overflow: hidden;
     cursor: pointer;
+    vertical-align: -18%;
 }
+
+.level-filterable:after {
+   margin-left: 5px;
+   font-weight: 600;
+   margin-top: 4px;
+   color: green;
+   content: "⑅";
+   vertical-align: -18%;
+}
+
 
 
 .clusterize-scroll{
