--- a/modules/zack/public/zack.css
+++ b/modules/zack/public/zack.css
@@ -60,11 +60,6 @@ body {
   font: 10px sans-serif;
 }
 
-.bar {
-  fill: steelblue;
-  shape-rendering: crispEdges;
-}
-
 .result-level {
     width: 70px;
     height: 20px;
@@ -164,7 +159,6 @@ body {
     vertical-align: -24%;
 }
 
-
 .level-filterable {
     font-size: 12px;
     background-color: lightgray;
@@ -186,8 +180,6 @@ body {
    content: "⑅";
    vertical-align: -18%;
 }
-
-
 
 .clusterize-scroll{
   overflow: auto;
@@ -221,4 +213,22 @@ body {
         display: inherit;
     }
 }
+
+
+
+/* Timline SVG Styles */
+.bar {
+  fill: steelblue;
+  shape-rendering: crispEdges;
+}
+
+.handle {
+  fill: gray;
+  shape-rendering: crispEdges;
+  width: 5px;
+  y: -3px;
+  height: 50px;
+  cursor: ew-resize;
+}
+
 
